dev/k8s/kratos/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: kratos
    app.kubernetes.io/name: kratos
    app.kubernetes.io/version: v0.11.1
  name: kratos
  namespace: kratos
spec:
  progressDeadlineSeconds: 3600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/instance: kratos
      app.kubernetes.io/name: kratos
  strategy:
    rollingUpdate:
      maxSurge: 30%
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      annotations:
      creationTimestamp: null
      labels:
        app.kubernetes.io/instance: kratos
        app.kubernetes.io/name: kratos
        app.kubernetes.io/version: v0.11.1
    spec:
      automountServiceAccountToken: true
      containers:
      - args:
        - serve
        - all
#        - --config
#        - /etc/config/kratos.yaml
        - --config
        - /etc/config/kratos/kratos-config.yaml
        command:
        - kratos
        name: kratos
        resources:
          limits:
            cpu: 300m
            memory: 500Mi
          requests:
            cpu: 100m
            memory: 200Mi
        image: oryd/kratos:v0.11.1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 4434
          name: http-admin
          protocol: TCP
        - containerPort: 4433
          name: http-public
          protocol: TCP
        volumeMounts:
        - mountPath: /etc/ssl/certs/testify-root.pem
          subPath: rootCA.pem
          name: testify-root
        - mountPath: /etc/config/kratos/
          name: config-volume
#        - mountPath: /etc/config
#          name: kratos-config-volume
#          readOnly: true
      restartPolicy: Always
      serviceAccount: kratos
      serviceAccountName: kratos
      volumes:
      - configMap:
          name: rootca
        name: testify-root
      - configMap:
          defaultMode: 420
          name: kratos-config-extra
        name: config-volume
      - configMap:
          defaultMode: 420
          name: kratos-config
        name: kratos-config-volume
